--- a/index.html
+++ b/index.html
@@ -13,12 +13,16 @@
   </head>
 
   <body>
+    <div>
+      <span class="skeleton-loader"></span>
+    </div>
     <div class="prod--wrapper">
       <div class="prod--col prod--img">
         <img
           id="productImage"
           class="prod--img-graphic skeleton-loader"
-          src=""
+          src="error.src"
+          alt="image"
         />
       </div>
       <div class="prod--col prod--details">
