--- a/index.html
+++ b/index.html
@@ -4,11 +4,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="loader.css" />
     <link rel="stylesheet" type="text/css" href="tile.css" />
-    <script
-      src="https://code.jquery.com/jquery-3.5.1.min.js"
-      integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
-      crossorigin="anonymous"
-    ></script>
     <script src="script.js"></script>
   </head>
 
@@ -18,19 +13,11 @@
     </div>
     <div class="prod--wrapper">
       <div class="prod--col prod--img">
-        <img
-          id="productImage"
-          class="prod--img-graphic skeleton-loader"
-          src="error.src"
-          alt="image"
-        />
+        <img id="productImage" class="prod--img-graphic skeleton-loader" />
       </div>
       <div class="prod--col prod--details">
         <div class="prod--row prod--name">
-          <span
-              id="productName"
-              class="prod--name-text skeleton-loader"
-            ></span>
+          <span id="productName" class="prod--name-text skeleton-loader"></span>
         </div>
         <div class="prod--row prod--description">
           <span
